@@ -1,7 +1,5 @@
 package pl.polardev.scase.commands;
 
-import net.kyori.adventure.text.minimessage.MiniMessage;
-import net.kyori.adventure.title.Title;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
@@ -10,18 +8,20 @@ import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import pl.polardev.scase.CasePlugin;
 import pl.polardev.scase.guis.CrateEditGUI;
+import pl.polardev.scase.helpers.ChatHelper;
 import pl.polardev.scase.models.Crate;
 
-import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Stream;
 
 public class AdminCaseCommand implements TabExecutor {
     private final CasePlugin plugin;
-    private final MiniMessage mm = MiniMessage.miniMessage();
-    private static final List<String> SUBCOMMANDS = Arrays.asList("create", "edit", "delete", "setkey", "givekey");
+    private static final Set<String> SUBCOMMANDS = Set.of("create", "edit", "delete", "setkey", "givekey");
+    private static final Set<String> CRATE_REQUIRING_COMMANDS = Set.of("edit", "delete", "setkey", "givekey");
+    private static final int MAX_KEYS_PER_COMMAND = 10000;
 
     public AdminCaseCommand(CasePlugin plugin) {
         this.plugin = plugin;
@@ -35,224 +35,234 @@ public class AdminCaseCommand implements TabExecutor {
         }
 
         if (!player.hasPermission("simplecase.admin")) {
-            showTitle(player, "<red>No Permission", "<gray>You don't have permission to use this command");
+            ChatHelper.showTitle(player, "<red>No Permission", "<gray>You don't have permission to use this command");
             return true;
         }
 
         if (args.length == 0) {
-            showTitle(player, "<gold>Usage", "<gray>/admincase {create|edit|delete|setkey|givekey}");
+            ChatHelper.showTitle(player, "<gold>Usage", "<gray>/admincase {create|edit|delete|setkey|givekey}");
             return true;
         }
 
-        String subcommand = args[0].toLowerCase();
-        switch (subcommand) {
+        final String subcommand = args[0].toLowerCase();
+        
+        return switch (subcommand) {
             case "create" -> handleCreate(player, args);
             case "edit" -> handleEdit(player, args);
             case "delete" -> handleDelete(player, args);
             case "setkey" -> handleSetKey(player, args);
             case "givekey" -> handleGiveKey(player, args);
-            default -> showTitle(player, "<red>Invalid Command", "<gray>Use /admincase {create|edit|delete|setkey|givekey}");
-        }
-
-        return true;
+            default -> {
+                ChatHelper.showTitle(player, "<red>Invalid Command", "<gray>Use /admincase {create|edit|delete|setkey|givekey}");
+                yield true;
+            }
+        };
     }
 
-    private void handleCreate(Player player, String[] args) {
+    private boolean handleCreate(Player player, String[] args) {
         if (args.length < 2) {
-            showTitle(player, "<red>Usage", "<gray>/admincase create <name>");
-            return;
+            ChatHelper.showTitle(player, "<red>Usage", "<gray>/admincase create <name>");
+            return true;
         }
 
-        String name = args[1];
+        final String name = args[1];
+        final Optional<Block> targetBlock = Optional.ofNullable(player.getTargetBlockExact(5))
+                .filter(block -> block.getType() != Material.AIR);
 
-        Block targetBlock = player.getTargetBlockExact(5);
-        if (targetBlock == null || targetBlock.getType() == Material.AIR) {
-            showTitle(player, "<red>Error", "<gray>Look at a block to create a crate");
-            return;
+        if (targetBlock.isEmpty()) {
+            ChatHelper.showTitle(player, "<red>Error", "<gray>Look at a block to create a crate");
+            return true;
         }
 
         if (plugin.getCrateManager().getCrate(name) != null) {
-            showTitle(player, "<red>Error", "<gray>Crate with this name already exists");
-            return;
+            ChatHelper.showTitle(player, "<red>Error", "<gray>Crate with this name already exists");
+            return true;
         }
 
-        plugin.getCrateManager().createCrate(name, targetBlock);
-        showTitle(player, "<green>Success", "<gray>Crate <gold>" + name + "<gray> created successfully");
+        plugin.getCrateManager().createCrate(name, targetBlock.get());
+        ChatHelper.showTitle(player, "<green>Success", "<gray>Crate <gold>" + name + "<gray> created successfully");
+        return true;
     }
 
-    private void handleEdit(Player player, String[] args) {
-        if (args.length < 2) {
-            showTitle(player, "<red>Usage", "<gray>/admincase edit <name>");
-            return;
-        }
-
-        String name = args[1];
-        Crate crate = plugin.getCrateManager().getCrate(name);
-
-        if (crate == null) {
-            showTitle(player, "<red>Error", "<gray>Crate <gold>" + name + "<gray> not found");
-            return;
-        }
-
-        new CrateEditGUI(plugin, player, crate).open();
+    private boolean handleEdit(Player player, String[] args) {
+        return withValidCrate(player, args, "edit", crate -> {
+            new CrateEditGUI(plugin, player, crate).open();
+            return true;
+        });
     }
 
-    private void handleDelete(Player player, String[] args) {
-        if (args.length < 2) {
-            showTitle(player, "<red>Usage", "<gray>/admincase delete <name>");
-            return;
-        }
-
-        String name = args[1];
-        Crate crate = plugin.getCrateManager().getCrate(name);
-
-        if (crate == null) {
-            showTitle(player, "<red>Error", "<gray>Crate <gold>" + name + "<gray> not found");
-            return;
-        }
-
-        plugin.getCrateManager().deleteCrate(name);
-        showTitle(player, "<green>Success", "<gray>Crate <gold>" + name + "<gray> deleted successfully");
+    private boolean handleDelete(Player player, String[] args) {
+        return withValidCrate(player, args, "delete", crate -> {
+            plugin.getCrateManager().deleteCrate(crate.getName());
+            ChatHelper.showTitle(player, "<green>Success", "<gray>Crate <gold>" + crate.getName() + "<gray> deleted successfully");
+            return true;
+        });
     }
 
-    private void handleSetKey(Player player, String[] args) {
-        if (args.length < 2) {
-            showTitle(player, "<red>Usage", "<gray>/admincase setkey <name>");
-            return;
-        }
-
-        String name = args[1];
-        Crate crate = plugin.getCrateManager().getCrate(name);
-
-        if (crate == null) {
-            showTitle(player, "<red>Error", "<gray>Crate <gold>" + name + "<gray> not found");
-            return;
-        }
-
-        ItemStack heldItem = player.getInventory().getItemInMainHand();
+    private boolean handleSetKey(Player player, String[] args) {
+        final ItemStack heldItem = player.getInventory().getItemInMainHand();
         if (heldItem.getType() == Material.AIR) {
-            showTitle(player, "<red>Error", "<gray>Hold an item in your hand to set as key");
-            return;
+            ChatHelper.showTitle(player, "<red>Error", "<gray>Hold an item in your hand to set as key");
+            return true;
         }
 
-        crate.setKeyItem(heldItem);
-        // Użyj natychmiastowego zapisu zamiast asynchronicznego
-        plugin.getCrateManager().saveCrateImmediately(crate);
-        showTitle(player, "<green>Success", "<gray>Key set for crate <gold>" + name);
+        return withValidCrate(player, args, "setkey", crate -> {
+            crate.setKeyItem(heldItem);
+            plugin.getCrateManager().saveCrateImmediately(crate);
+            ChatHelper.showTitle(player, "<green>Success", "<gray>Key set for crate <gold>" + crate.getName());
+            return true;
+        });
     }
 
-    private void handleGiveKey(Player player, String[] args) {
+    private boolean handleGiveKey(Player player, String[] args) {
         if (args.length < 3) {
-            showTitle(player, "<red>Usage", "<gray>/admincase givekey <crate> <player/all> [amount]");
-            return;
+            ChatHelper.showTitle(player, "<red>Usage", "<gray>/admincase givekey <crate> <player/all> [amount]");
+            return true;
         }
 
-        String crateName = args[1];
-        String target = args[2];
-        int amount = args.length > 3 ? parseAmount(args[3]) : 1;
+        final String crateName = args[1];
+        final String target = args[2];
+        final int amount = args.length > 3 ? parseAmount(args[3]) : 1;
 
-        Crate crate = plugin.getCrateManager().getCrate(crateName);
-        if (crate == null) {
-            showTitle(player, "<red>Error", "<gray>Crate <gold>" + crateName + "<gray> not found");
-            return;
-        }
-
-        ItemStack keyItem = crate.getKeyItem();
-        if (keyItem == null) {
-            showTitle(player, "<red>Error", "<gray>Crate <gold>" + crateName + "<gray> has no key set");
-            return;
-        }
-
-        if (target.equalsIgnoreCase("all")) {
-            for (Player onlinePlayer : Bukkit.getOnlinePlayers()) {
-                giveKeysToPlayer(onlinePlayer, keyItem, amount);
-            }
-            showTitle(player, "<green>Success", "<gray>Gave <gold>" + amount + "<gray> keys to all players");
-        } else {
-            Player targetPlayer = Bukkit.getPlayer(target);
-            if (targetPlayer == null) {
-                showTitle(player, "<red>Error", "<gray>Player <gold>" + target + "<gray> not found");
-                return;
-            }
-
-            giveKeysToPlayer(targetPlayer, keyItem, amount);
-            showTitle(player, "<green>Success", "<gray>Gave <gold>" + amount + "<gray> keys to <gold>" + targetPlayer.getName());
-        }
+        return withValidCrate(crateName, crate -> {
+            return crate.getKeyItem()
+                    .map(keyItem -> {
+                        if (target.equalsIgnoreCase("all")) {
+                            return giveKeysToAllPlayers(player, keyItem, amount);
+                        } else {
+                            return giveKeysToPlayer(player, target, keyItem, amount);
+                        }
+                    })
+                    .orElseGet(() -> {
+                        ChatHelper.showTitle(player, "<red>Error", "<gray>Crate <gold>" + crateName + "<gray> has no key set");
+                        return true;
+                    });
+        });
     }
 
-    private void giveKeysToPlayer(Player player, ItemStack keyItem, int totalAmount) {
-        int remaining = totalAmount;
-        int maxStackSize = keyItem.getMaxStackSize();
-
-        while (remaining > 0) {
-            int stackSize = Math.min(remaining, maxStackSize);
-            ItemStack key = keyItem.clone();
-            key.setAmount(stackSize);
-
-            var leftover = player.getInventory().addItem(key);
-            if (!leftover.isEmpty()) {
-                for (ItemStack leftoverItem : leftover.values()) {
-                    player.getWorld().dropItemNaturally(player.getLocation(), leftoverItem);
-                }
-            }
-
-            remaining -= stackSize;
+    private boolean withValidCrate(Player player, String[] args, String commandName, CrateFunction function) {
+        if (args.length < 2) {
+            ChatHelper.showTitle(player, "<red>Usage", "<gray>/admincase " + commandName + " <name>");
+            return true;
         }
+        return withValidCrate(args[1], function);
+    }
+
+    private boolean withValidCrate(String crateName, CrateFunction function) {
+        final Crate crate = plugin.getCrateManager().getCrate(crateName);
+        if (crate == null) {
+            ChatHelper.showTitle(null, "<red>Error", "<gray>Crate <gold>" + crateName + "<gray> not found");
+            return true;
+        }
+        return function.apply(crate);
+    }
+
+    private boolean giveKeysToAllPlayers(Player sender, ItemStack keyItem, int amount) {
+        final var onlinePlayers = Bukkit.getOnlinePlayers();
+        onlinePlayers.parallelStream()
+                .forEach(player -> distributeKeys(player, keyItem, amount));
+
+        ChatHelper.showTitle(sender, "<green>Success",
+                "<gray>Gave <gold>" + amount + "<gray> keys to <gold>" + onlinePlayers.size() + "<gray> players");
+        return true;
+    }
+
+    private boolean giveKeysToPlayer(Player sender, String targetName, ItemStack keyItem, int amount) {
+        return Optional.ofNullable(Bukkit.getPlayer(targetName))
+                .map(targetPlayer -> {
+                    distributeKeys(targetPlayer, keyItem, amount);
+                    ChatHelper.showTitle(sender, "<green>Success",
+                            "<gray>Gave <gold>" + amount + "<gray> keys to <gold>" + targetPlayer.getName());
+                    return true;
+                })
+                .orElseGet(() -> {
+                    ChatHelper.showTitle(sender, "<red>Error", "<gray>Player <gold>" + targetName + "<gray> not found");
+                    return true;
+                });
+    }
+
+    private void distributeKeys(Player player, ItemStack keyItem, int totalAmount) {
+        final int maxStackSize = keyItem.getMaxStackSize();
+
+        Stream.iterate(totalAmount, remaining -> remaining > 0, remaining -> remaining - maxStackSize)
+                .mapToInt(remaining -> Math.min(remaining, maxStackSize))
+                .mapToObj(stackSize -> {
+                    final ItemStack key = keyItem.clone();
+                    key.setAmount(stackSize);
+                    return key;
+                })
+                .forEach(key -> {
+                    final var leftover = player.getInventory().addItem(key);
+                    leftover.values().forEach(item ->
+                            player.getWorld().dropItemNaturally(player.getLocation(), item));
+                });
     }
 
     private int parseAmount(String str) {
         try {
-            int amount = Integer.parseInt(str);
-            return Math.max(1, Math.min(amount, 10000)); // Max 10000 kluczy
+            return Math.clamp(Integer.parseInt(str), 1, MAX_KEYS_PER_COMMAND);
         } catch (NumberFormatException e) {
             return 1;
         }
     }
 
-    private void showTitle(Player player, String title, String subtitle) {
-        player.showTitle(Title.title(
-            mm.deserialize(title),
-            mm.deserialize(subtitle),
-            Title.Times.times(Duration.ofMillis(500), Duration.ofSeconds(3), Duration.ofMillis(500))
-        ));
-    }
-
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
         if (!(sender instanceof Player) || !sender.hasPermission("simplecase.admin")) {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        if (args.length == 1) {
-            return SUBCOMMANDS.stream()
-                    .filter(sub -> sub.toLowerCase().startsWith(args[0].toLowerCase()))
-                    .collect(Collectors.toList());
+        return switch (args.length) {
+            case 1 -> getFilteredSubcommands(args[0]);
+            case 2 -> getSecondArgumentCompletions(args[0], args[1]);
+            case 3 -> getThirdArgumentCompletions(args[0], args[2]);
+            default -> List.of();
+        };
+    }
+
+    private List<String> getFilteredSubcommands(String input) {
+        return SUBCOMMANDS.stream()
+                .filter(sub -> sub.startsWith(input.toLowerCase()))
+                .sorted()
+                .toList();
+    }
+
+    private List<String> getSecondArgumentCompletions(String command, String input) {
+        return CRATE_REQUIRING_COMMANDS.contains(command.toLowerCase())
+                ? getFilteredCrateNames(input)
+                : List.of();
+    }
+
+    private List<String> getThirdArgumentCompletions(String command, String input) {
+        return "givekey".equalsIgnoreCase(command)
+                ? getFilteredPlayerNames(input)
+                : List.of();
+    }
+
+    private List<String> getFilteredCrateNames(String input) {
+        return plugin.getCrateManager().getCrateNames().stream()
+                .filter(name -> name.toLowerCase().startsWith(input.toLowerCase()))
+                .sorted()
+                .toList();
+    }
+
+    private List<String> getFilteredPlayerNames(String input) {
+        final String lowerInput = input.toLowerCase();
+        final List<String> playerNames = Bukkit.getOnlinePlayers().stream()
+                .map(Player::getName)
+                .filter(name -> name.toLowerCase().startsWith(lowerInput))
+                .sorted()
+                .collect(ArrayList::new, ArrayList::add, ArrayList::addAll);
+
+        if ("all".startsWith(lowerInput)) {
+            playerNames.add(0, "all"); // Add "all" at the beginning
         }
 
-        if (args.length == 2) {
-            String subcommand = args[0].toLowerCase();
-            if (Arrays.asList("edit", "delete", "setkey", "givekey").contains(subcommand)) {
-                return plugin.getCrateManager().getCrateNames().stream()
-                        .filter(name -> name.toLowerCase().startsWith(args[1].toLowerCase()))
-                        .collect(Collectors.toList());
-            }
-        }
+        return playerNames;
+    }
 
-        if (args.length == 3 && args[0].equalsIgnoreCase("givekey")) {
-            List<String> players = Bukkit.getOnlinePlayers().stream()
-                    .map(Player::getName)
-                    .filter(name -> name.toLowerCase().startsWith(args[2].toLowerCase()))
-                    .collect(Collectors.toList());
-            if ("all".startsWith(args[2].toLowerCase())) {
-                players.add("all");
-            }
-            return players;
-        }
-
-        if (args.length == 4 && args[0].equalsIgnoreCase("givekey")) {
-            return Arrays.asList("1", "5", "10", "16", "32", "64", "100", "500", "1000");
-        }
-
-        return new ArrayList<>();
+    @FunctionalInterface
+    private interface CrateFunction {
+        boolean apply(Crate crate);
     }
 }
